compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__no_recur_in_anon_fn.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 178
expression: "pub fn main() {\n  fn() { main() }\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  fn() { main() }
  1
}


----- COMPILED JAVASCRIPT
export function main() {
  () => { return main(); };
  return 1;
}
