compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__pipe_shadow_import.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 370
expression: "\n        import wibble.{println}\n        pub fn main() {\n          let println =\n            \"oh dear\"\n            |> println\n          println\n        }"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam
pub fn println(x: String) {  }

-- main.gleam

        import wibble.{println}
        pub fn main() {
          let println =
            "oh dear"
            |> println
          println
        }

----- COMPILED JAVASCRIPT
import * as $wibble from "../wibble.mjs";
import { println } from "../wibble.mjs";

export function main() {
  let _block;
  let _pipe = "oh dear";
  _block = println(_pipe);
  let println$1 = _block;
  return println$1;
}
