compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__pipe_variable_rebinding.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 355
expression: "\npub fn main() {\n  let version = 1 |> version()\n  version\n}\n\npub fn version(n) {\n  Ok(1)\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let version = 1 |> version()
  version
}

pub fn version(n) {
  Ok(1)
}

----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export function version(n) {
  return new Ok(1);
}

export function main() {
  let _block;
  let _pipe = 1;
  _block = version(_pipe);
  let version$1 = _block;
  return version$1;
}
