compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__public_function_gets_jsdoc.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 566
expression: "\n/// Hello! This is the documentation of the `main`\n/// function.\n///\npub fn main() { 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE

/// Hello! This is the documentation of the `main`
/// function.
///
pub fn main() { 1 }


----- COMPILED JAVASCRIPT
/**
 * Hello! This is the documentation of the `main`
 * function.
 */
export function main() {
  return 1;
}
