compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__recursion_with_discards.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 167
expression: "pub fn main(f, _) {\n  f()\n  main(f, 1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(f, _) {
  f()
  main(f, 1)
}


----- COMPILED JAVASCRIPT
export function main(loop$f, _) {
  while (true) {
    let f = loop$f;
    f();
    loop$f = f;
    1;
  }
}
