compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__reserved_word_argument.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 252
expression: "pub fn main(with) {\n  with\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(with) {
  with
}


----- COMPILED JAVASCRIPT
export function main(with$) {
  return with$;
}
