compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__reserved_word_const.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 239
expression: "const in = 1\n\npub fn export() {\n  in\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
const in = 1

pub fn export() {
  in
}


----- COMPILED JAVASCRIPT
const in$ = 1;

export function export$() {
  return in$;
}
