compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__reserved_word_fn.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 202
expression: "pub fn class() {\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn class() {
  Nil
}


----- COMPILED JAVASCRIPT
export function class$() {
  return undefined;
}
